--- a/users/templates/users/estudantes_inscritos.html
+++ b/users/templates/users/estudantes_inscritos.html
@@ -99,7 +99,7 @@
               </a>
             </td>
             <td style="color:#{{ aluno.curso2.cor }};">
-              {{ aluno.get_curso_display }}
+              {{ aluno.curso2 }}
             </td>
             <td>
               {{ aluno.cr|floatformat:4 }}
