--- a/templates/projeto.html
+++ b/templates/projeto.html
@@ -44,7 +44,7 @@
 <h5>Grupo</h5>
 <ul>
     {% for membro in alocado.projeto.alocacao_set.all %} 
-        <li><a href="mailto:{{membro.aluno.user.email}}">{{membro.aluno.user.get_full_name}} &lt;{{membro.aluno.user.email}}&gt; [{{ membro.aluno.get_curso_display }}]
+        <li><a href="mailto:{{membro.aluno.user.email}}">{{membro.aluno.user.get_full_name}} &lt;{{membro.aluno.user.email}}&gt; [{{ membro.aluno.curso2 }}]
         </a></li>
     {% endfor %}
 </ul>
