--- a/users/templates/users/estudantes_lista.html
+++ b/users/templates/users/estudantes_lista.html
@@ -56,9 +56,9 @@
           <td>
             <a href="mailto:{{aluno.user.email}}"> &lt;{{aluno.user.email}}&gt;</a>
           </td>
-          {% if aluno.curso %}
+          {% if aluno.curso2 %}
             <td style="color:#{{ aluno.curso2.cor }};">
-              {{ aluno.get_curso_display }}
+              {{ aluno.curso2 }}
             </td>
           {% else %}
             <td>Indefinido</td>
