--- a/professores/templates/professores/banca_avaliar.html
+++ b/professores/templates/professores/banca_avaliar.html
@@ -115,7 +115,7 @@
             {% comment %} </a>
             <a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>
             {% endcomment %} 
-            [{{ alocacao.aluno.get_curso_display }}]
+            [{{ alocacao.aluno.curso2 }}]
           </li>
         {% endfor %}
       </ul>
