--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -148,7 +148,7 @@
                     <a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>
                   </span>
                   <span class="curso">
-                    [{{ alocacao.aluno.get_curso_display }}]
+                    [{{ alocacao.aluno.curso2 }}]
                   </span>
                 </li>
               {% endfor %}
