--- a/projetos/templates/projetos/graficos.html
+++ b/projetos/templates/projetos/graficos.html
@@ -50,7 +50,7 @@
                                 {{nota|stringformat:".2f"|unlocalize}},
                             {% endfor %}
                         ],
-                        label: "{{media.curso}}",
+                        label: "{{media.curso2.sigla}}",
                         borderColor: "{{media.cor}}",
                         fill: false,
                         errorBars: {
