--- a/administracao/templates/administracao/relatorio_alunos.html
+++ b/administracao/templates/administracao/relatorio_alunos.html
@@ -24,7 +24,7 @@
         <p style="page-break-before: always"></p>
 
         <h3>Aluno: {{aluno.user.get_full_name}}</h3>
-        <strong>Curso:</strong> {{aluno.get_curso_display}} <br>
+        <strong>Curso:</strong> {{aluno.curso2}} <br>
         <strong>CR:</strong> {{aluno.cr}} <br>
         {% if aluno.externo %}<span style="color:red">[{{aluno.externo}}]</span><br>{% endif %}
         <br>
