--- a/administracao/templates/administracao/selecionar_orientadores.html
+++ b/administracao/templates/administracao/selecionar_orientadores.html
@@ -76,7 +76,7 @@
               {{alocacao.aluno.user.get_full_name}}
               </a>
               <a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>
-              [{{ alocacao.aluno.get_curso_display }}]
+              [{{ alocacao.aluno.curso2 }}]
               {% if alocacao.aluno.externo %}<span style="color:red">[{{alocacao.aluno.externo}}]</span>{% endif %}
           </li>
         {% endfor %}  
