--- a/professores/templates/professores/banca_ver.html
+++ b/professores/templates/professores/banca_ver.html
@@ -101,7 +101,7 @@
           {{alocacao.aluno.user.get_full_name}}
         </a>
         <a href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>
-        [{{ alocacao.aluno.get_curso_display }}]
+        [{{ alocacao.aluno.curso2 }}]
       </li>
     {% endfor %}
   </ul>
