--- a/professores/templates/professores/bancas_lista.html
+++ b/professores/templates/professores/bancas_lista.html
@@ -233,7 +233,7 @@
                     <a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">
                       {{alocacao.aluno.user.get_full_name}}
                     </a>
-                    <span class="curso">[{{ alocacao.aluno.get_curso_display }}]</span>
+                    <span class="curso">[{{ alocacao.aluno.curso2 }}]</span>
                     <a class="email" href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>
                   </li>
                 {% endfor %}
