--- a/professores/templates/professores/mentorias_alocadas.html
+++ b/professores/templates/professores/mentorias_alocadas.html
@@ -73,7 +73,7 @@
                   <ol>
                     {% for alocacao in e.projeto.alocacao_set.all %} 
                       <li><a class="imprimir" href="{% url 'estudante_detail' alocacao.aluno.id %}">{{alocacao.aluno.user.get_full_name}}
-                      <span class="curso">[{{ alocacao.aluno.get_curso_display }}]</span>
+                      <span class="curso">[{{ alocacao.aluno.curso2 }}]</span>
                       <a class="email" href="mailto:{{alocacao.aluno.user.email}}">&lt;{{alocacao.aluno.user.email}}&gt;</a>&nbsp;
                       </a></li>
                     {% endfor %}
