--- a/projetos/templates/projetos/projetos_fechados.html
+++ b/projetos/templates/projetos/projetos_fechados.html
@@ -232,7 +232,7 @@
                 opção #{{prioridade}}
               {% endif %}">
                 {{aluno.user.get_full_name}}
-                <span class="curso">[{{ aluno.get_curso_display }}]</span>
+                <span class="curso">[{{ aluno.curso2 }}]</span>
               </a>
               {% if aluno.externo %}<span style="color:red">[{{aluno.externo}}]</span>{% endif %}
               <div class="prioridade" style="display: none;">{{prioridade}}</div> <!-- para mostrar no gráfico -->
