--- a/users/templates/users/estudantes_objetivos.html
+++ b/users/templates/users/estudantes_objetivos.html
@@ -56,9 +56,9 @@
             <td>
               <a href="mailto:{{aluno.user.email}}"> &lt;{{aluno.user.email}}&gt;</a><br>
             </td>
-            {% if aluno.curso %}
+            {% if aluno2 %}
               <td style="color:#{{ aluno.curso2.cor }};">
-                {{ aluno.get_curso_display }}
+                {{ aluno.curso2 }}
               </td>
             {% else %}
               <td>Indefinido</td>
