--- a/professores/templates/professores/bancas_editar.html
+++ b/professores/templates/professores/bancas_editar.html
@@ -15,12 +15,18 @@
     $(document).ready(function () {     
       $('#projeto').change(function(){
         var titulo = $(this).children(':selected').data('titulo');
+        var titulo_link = $(this).children(':selected').data('titulo_link');
         var organizacao = $(this).children(':selected').data('organizacao');
+        var organizacao_link = $(this).children(':selected').data('organizacao_link');
         var orientador = $(this).children(':selected').data('orientador');
+        var orientador_link = $(this).children(':selected').data('orientador_link');
         var orientador_id = $(this).children(':selected').data('orientador_id');
         $('#titulo').text(titulo);
+        $('#titulo_link').attr("href", titulo_link);
         $('#organizacao').text(organizacao);
+        $('#organizacao_link').attr("href", organizacao_link);
         $('#orientador').text(orientador);
+        $('#orientador_link').attr("href", orientador_link);
         $('#orientador_id').val(orientador_id);
 
         var mensagem = $(this).children(':selected').data('mensagem');
@@ -59,8 +65,11 @@
           <option value="{{projeto.id}}"
           style="font-size: 0.75em;{% if projeto.id in projetos_agendados %}color: lightgrey;{% endif %}"
           data-titulo="{{projeto.titulo}}"
+          data-titulo_link="{% url 'projeto_completo' projeto.id %}"
           data-organizacao="{{projeto.organizacao}}"
+          data-organizacao_link="{% url 'organizacao_completo' projeto.organizacao.id %}"
           data-orientador="{% if projeto.orientador %}{{projeto.orientador}}{% else %}SEM ORIENTADOR{% endif %}"
+          data-orientador_link="{% if projeto.orientador %}{% url 'professor_detail' projeto.orientador.id %}{% endif %}"
           data-orientador_id="{% if projeto.orientador %}{{projeto.orientador.user.id}}{% else %}0{% endif %}"
           {% if projeto.id == banca.projeto.id %} selected {% endif %}
           data-subtext="{% if projeto.orientador %}{{projeto.orientador}}{% else %}SEM ORIENTADOR{% endif %}"
@@ -75,29 +84,40 @@
         {% endfor %}
       </select><br><br>
 
-      Título: <label id="titulo" name="titulo">
-        {% if banca and banca.projeto %}
-          {{banca.projeto.get_titulo}}
-        {% else %}
-          Titulo de Projeto não definido
-        {% endif %}
-      </label><br>
+      Título: 
+      <a id="titulo_link" name="titulo_link" {% if banca and banca.projeto %}href="{% url 'projeto_completo' banca.projeto.id %}"{% endif %}>
+        <label id="titulo" name="titulo">
+          {% if banca and banca.projeto %}
+            {{banca.projeto.get_titulo}}
+          {% else %}
+            Titulo de Projeto não definido
+          {% endif %}
+        </label>
+      </a>
+      <br>
 
-      Organização: <label id="organizacao" name="organizacao">
-        {% if banca and banca.projeto and banca.projeto.organizacao %}
-          {{banca.projeto.organizacao}}
-        {% else %}
-          Organização Parceira não definida
-        {% endif %}
-      </label><br>
+      Organização: 
+      <a id="organizacao_link" name="organizacao_link" {% if banca and banca.projeto and banca.projeto.organizacao %}href="{% url 'organizacao_completo' banca.projeto.organizacao.id %}"{% endif %}>
+        <label id="organizacao" name="organizacao">
+          {% if banca and banca.projeto and banca.projeto.organizacao %}
+            {{banca.projeto.organizacao}}
+          {% else %}
+            Organização Parceira não definida
+          {% endif %}
+        </label>
+      </a>
+      <br>
       
-      Orientador(a): <label id="orientador" name="orientador">
-        {% if banca and banca.projeto and banca.projeto.orientador %}
-          {{banca.projeto.orientador}}
-        {% else %}
-          Sem identificação de Orientador(a)
-        {% endif %}
-      </label>
+      Orientador(a): 
+      <a id="orientador_link" name="orientador_link" {% if banca and banca.projeto and banca.projeto.orientador %}href="{% url 'professor_detail' banca.projeto.orientador.id %}"{% endif %}>
+        <label id="orientador" name="orientador">
+          {% if banca and banca.projeto and banca.projeto.orientador %}
+            {{banca.projeto.orientador}}
+          {% else %}
+            Sem identificação de Orientador(a)
+          {% endif %}
+        </label>
+      </a>
       <label hidden id="orientador_id"></label>
       <br>
 
@@ -244,9 +264,6 @@
       <br><br>
       <button id="submit" type="submit" name="atualizar" >{% if banca %}Atualizar{% else %}Agendar{% endif %}</button>
       <button id="submit" type="submit" name="excluir" >Excluir Banca</button>
-      
-
-      
 
       <span id="mensagem"></span>
     </form>
