links de for corretos

--- a/professores/templates/professores/banca_avaliar.html
+++ b/professores/templates/professores/banca_avaliar.html
@@ -181,49 +181,49 @@
           <table style="width:100%">
             <tr>
               <th class="th_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}NA" style="width:10%;">
-                <label for="objetivo.{{objetivo.id}}.NA" style="white-space: nowrap;">
+                <label for="objetivo{{objetivo.id}}NA" style="white-space: nowrap;">
                   N/A
                   <input type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}NA" id="objetivo{{objetivo.id}}NA" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.NA" required> 
                 </label>
               </th>
               <th class="th_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}I" style="width:18%">
-                <label for="objetivo.{{objetivo.id}}.I " style="white-space: nowrap;">
+                <label for="objetivo{{objetivo.id}}I" style="white-space: nowrap;">
                   <span class="nivel" lang="pt">Insatisfatório&nbsp;</span><span class="nivel" lang="en">Unsatisfactory&nbsp;</span>(I)
                   <input type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}I" id="objetivo{{objetivo.id}}I" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.I" required>
                 </label>
               </th>
               <th class="th_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}D" style="width:18%">
-                <label for="objetivo{{objetivo.id}}D " style="white-space: nowrap;">
+                <label for="objetivo{{objetivo.id}}D" style="white-space: nowrap;">
                   <span class="nivel" lang="pt">Em Desenvolvimento&nbsp;</span><span class="nivel" lang="en">under Development&nbsp;</span>(D)
                   <input type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}D" id="objetivo{{objetivo.id}}D" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.D " required>
                 </label>
               </th>
               <th class="th_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}C objetivo{{objetivo.id}}CX" style="width:18%">
-                <label for="objetivo{{objetivo.id}}C " style="white-space: nowrap; margin-right: 2em;">
+                <label for="objetivo{{objetivo.id}}C" style="white-space: nowrap; margin-right: 2em;">
                   <span class="nivel" lang="pt">Essencial&nbsp;</span><span class="nivel" lang="en">Fundamental&nbsp;</span>(C)
                   <input type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}C" id="objetivo{{objetivo.id}}C" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.C" required>
                 </label>
-                <label for="objetivo{{objetivo.id}}C+" style="white-space: nowrap;">
+                <label for="objetivo{{objetivo.id}}CX" style="white-space: nowrap;">
                   (C+)
                   <input type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}C objetivo{{objetivo.id}}CX" id="objetivo{{objetivo.id}}CX" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.C+" required>
                 </label>
               </th>
               <th class="th_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}B objetivo{{objetivo.id}}BX" style="width:18%">
-                <label for="objetivo{{objetivo.id}}B " style="white-space: nowrap; margin-right: 2em;">
+                <label for="objetivo{{objetivo.id}}B" style="white-space: nowrap; margin-right: 2em;">
                   <span class="nivel" lang="pt">Proficiente&nbsp;</span><span class="nivel" lang="en">Proficient&nbsp;</span>(B)
                   <input type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}B" id="objetivo{{objetivo.id}}B" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.B" required>
                 </label>
-                <label for="objetivo{{objetivo.id}}B+" style="white-space: nowrap;">
+                <label for="objetivo{{objetivo.id}}BX" style="white-space: nowrap;">
                   (B+)
                   <input type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}B objetivo{{objetivo.id}}BX" id="objetivo{{objetivo.id}}BX" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.B+" required>
                 </label>
               </th>
               <th class="th_objetivos tabela{{objetivo.id}} objetivo{{objetivo.id}}A objetivo{{objetivo.id}}AX" style="width:18%">
-                <label for="objetivo{{objetivo.id}}A " style="white-space: nowrap; margin-right: 2em;">
+                <label for="objetivo{{objetivo.id}}A" style="white-space: nowrap; margin-right: 2em;">
                   <span class="nivel" lang="pt">Avançado&nbsp;</span><span class="nivel" lang="en">Advanced&nbsp;</span>(A)
                   <input type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}A" id="objetivo{{objetivo.id}}A" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.A" required>
                 </label>
-                <label for="objetivo{{objetivo.id}}A+" style="white-space: nowrap;">
+                <label for="objetivo{{objetivo.id}}AX" style="white-space: nowrap;">
                   (A+)
                   <input type="radio" class="tabela{{objetivo.id}} objetivo{{objetivo.id}}A objetivo{{objetivo.id}}AX" id="objetivo{{objetivo.id}}AX" name="objetivo.{{objetivo.id}}" value="{{objetivo.id}}.A+" required>
                 </label>
