--- a/documentos/templates/documentos/certificado_coorientador.html
+++ b/documentos/templates/documentos/certificado_coorientador.html
@@ -135,10 +135,10 @@
     <br><br>
     Atenciosamente,<br><br>
   
-  <img class="signature" src="arquivos/signature.png">
+  <img class="signature" src="{{configuracao.assinatura.url}}">
   <br>
-    Prof. Dr. Luciano Pereira Soares<br>
-    <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
+  {{configuracao.coordenador}}<br>
+  <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
   </span>
 
 
