--- a/documentos/templates/documentos/certificado_banca_final.html
+++ b/documentos/templates/documentos/certificado_banca_final.html
@@ -124,10 +124,10 @@
 
   <span class="corpo_certificado">
     Atenciosamente,<br>
-    <img class="signature" src="arquivos/signature.png">
+    <img class="signature" src="{{configuracao.assinatura.url}}">
     <br>
-      Prof. Dr. Luciano Pereira Soares<br>
-      <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
+    {{configuracao.coordenador}}<br>
+    <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
   </span>
 
 {% endblock %}
