--- a/documentos/templates/documentos/certificado_orientador.html
+++ b/documentos/templates/documentos/certificado_orientador.html
@@ -121,10 +121,10 @@
     <br>
     Atenciosamente,<br>
   
-  <img class="signature" src="arquivos/signature.png">
+  <img class="signature" src="{{configuracao.assinatura.url}}">
   <br>
-    Prof. Dr. Luciano Pereira Soares<br>
-    <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
+  {{configuracao.coordenador}}<br>
+  <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
   </span>
 
 {% endblock %}
