--- a/documentos/templates/documentos/certificado_coorientador.html
+++ b/documentos/templates/documentos/certificado_coorientador.html
@@ -135,7 +135,7 @@
     <br><br>
     Atenciosamente,<br><br>
   
-  <img class="signature" src="{{configuracao.assinatura.url}}">
+  <img class="signature" src="{{configuracao.assinatura.url|slice:"1:"}}">
   <br>
   {{configuracao.coordenador}}<br>
   <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
