--- a/documentos/templates/documentos/certificados_submetidos.html
+++ b/documentos/templates/documentos/certificados_submetidos.html
@@ -148,7 +148,7 @@
             {% with formatada=True %}
             &amp;body=
               {% include 'mensagem_certificados.html' %}
-            ">
+            " target="_blank" rel="noopener noreferrer">
             {% endwith %}
             formatado
           </a>
@@ -172,7 +172,7 @@
             {% endif %}
             {% with formatada=False %}
             &amp;body={% include 'mensagem_certificados.html' %}
-            ">
+            " target="_blank" rel="noopener noreferrer">
             {% endwith %}
             não formatado
           </a>
