--- a/documentos/templates/documentos/gerar_certificados.html
+++ b/documentos/templates/documentos/gerar_certificados.html
@@ -154,6 +154,7 @@
     
   {% else %}
     <p>Não foram gerados certificados.</p>
+    <a href="{% url 'certificados_submetidos' %}">Verificar Certificados já criados.</a>
   {% endif %}
 
 {% endblock %}
