--- a/documentos/templates/documentos/certificado_banca_falconi.html
+++ b/documentos/templates/documentos/certificado_banca_falconi.html
@@ -123,7 +123,7 @@
     <br>
     Atenciosamente,<br>
   
-  <img class="signature" src="{{configuracao.assinatura.url}}">
+  <img class="signature" src="{{configuracao.assinatura.url|slice:"1:"}}">
   <br>
   {{configuracao.coordenador}}<br>
   <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
