--- a/documentos/templates/documentos/certificado_banca_final.html
+++ b/documentos/templates/documentos/certificado_banca_final.html
@@ -124,7 +124,7 @@
 
   <span class="corpo_certificado">
     Atenciosamente,<br>
-    <img class="signature" src="{{configuracao.assinatura.url}}">
+    <img class="signature" src="{{configuracao.assinatura.url|slice:"1:"}}">
     <br>
     {{configuracao.coordenador}}<br>
     <small>Coordenador do Projeto Final de Engenharia do Insper</small><br>
