--- a/administracao/templates/administracao/selecionar_orientadores.html
+++ b/administracao/templates/administracao/selecionar_orientadores.html
@@ -16,12 +16,12 @@
 
 {% block content %}
 
+  <span class="titulo">Selecionar Orientadores</span>
+
   {% if mensagem %}
-    <h2 class="red-bold">{{mensagem|linebreaks}}</h2>
+    <h5 class="red-bold">{{mensagem|safe|linebreaks}}</h5>
     <br>
   {% endif %}
-
-  <span class="titulo">Selecionar Orientadores</span>
 
   {% comment %}
   <label for="filter">Edição:</label>
