usando agenda para prazo de escolha de propostas

--- a/projetos/templates/projetos/confirmacao.html
+++ b/projetos/templates/projetos/confirmacao.html
@@ -7,7 +7,9 @@
 
 {% block content %}
 
-  <u>Dados submetidos</u><br><br>
+  <u>Dados submetidos</u><br>
+  <span>Obs: Você pode enviar uma seleção de propostas quantas vezes desejar até dia {{prazo}}.</span>
+  <br><br>
 
   <div class="boxed">
   {% autoescape off %}
