--- a/administracao/templates/administracao/configurar.html
+++ b/administracao/templates/administracao/configurar.html
@@ -45,24 +45,37 @@
     <input type="checkbox" id="liberados_projetos" name="liberados_projetos" {% if configuracao.liberados_projetos %}checked{% endif %}>
     <label for="liberados_projetos"> Projetos Liberados para Estudantes</label>
     <small>(Estudantes conseguirão ver os projetos em que foram alocados)</small>
+    <br>
+
+    <label for="min_props">Mínimo de Propostas para Estudantes Selecionarem:</label>
+    <input id="min_props" name="min_props" type="number" min="0" max="99" step="1" style="text-align:right;" value="{{configuracao.min_props}}"/>
 
     <br><br><hr><br>
     <label for="prazo_preencher_banca">Prazo para avaliadores preencherem a avaliação de banca:</label> <input id="prazo_preencher_banca" name="prazo_preencher_banca" style="text-align:right;" type="number" min="0" max="9999" step="1" value="{{configuracao.prazo_preencher_banca}}"/> dias
     
     <br><br><hr><br>
-    <label for="coordenador">Nome do coordenador:</label> <input id="coordenador" name="coordenador" type="text" size="36" maxlength="{{coord_length|add:-2}}" value="{{configuracao.coordenador}}"/><br>
+
+    <label for="coordenacao"><span lang="pt">Coordenador PFE</span>: </label>
+    <select name="coordenacao" id="coordenacao" title="Selecione o coordenador do PFE" required>
+      {% for administrador in administradores %}
+        <option value="{{administrador.id}}" {% if administrador.id == configuracao.coordenacao.id %}selected{% endif %}>
+          {{administrador.user.get_full_name}}
+        </option>
+      {% endfor %}
+    </select>
+    <br>
+    <label for="coordenador">Nome para certificados:</label> <input id="coordenador" name="coordenador" type="text" size="36" maxlength="{{coord_length|add:-2}}" value="{{configuracao.coordenador}}"/><br>
     <label for="assinatura">Assinatura (proporção ~250x70):</label>
     <input id="assinatura" type="file" name="assinatura" accept="image/*">
     {% if configuracao.assinatura %}
       <br><a href="http://{{request.get_host}}{{configuracao.assinatura.url}}">
         <span class="full-text">http://{{request.get_host}}{{configuracao.assinatura.url}}</span><br>
-        <img class="signature" src="{{configuracao.assinatura.url}}">
-      </a>
-      {{configuracao.assinatura.url|slice:"1:"}}<br>
+        <div style="border: 1px solid #000; border-style: dotted; padding: 8px; width:fit-content;"><img class="signature" src="{{configuracao.assinatura.url}}"></div>
+      </a><br>
 
     {% endif %}
     
-    <br><br><br><br>
+    <br><br>
     <button type="submit">Confirmar</button>
   </form>
 {% endblock %}
