--- a/professores/templates/professores/resultado_projetos.html
+++ b/professores/templates/professores/resultado_projetos.html
@@ -166,12 +166,30 @@
           {% comment %} Orientador {% endcomment %}
           <td>
             {% if projeto.orientador %}
-              <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">
-                {{ projeto.orientador }}
-              </a>
-              {% else %}
-                Orientador não definido
+            <a class="imprimir" href="{% url 'professor_detail' projeto.orientador.id %}">
+              {{ projeto.orientador }}
+            </a>
+            {% else %}
+              Orientador não definido
+            {% endif %}
+
+            {% with coorientadores=projeto.coorientador_set.all %}
+              {% if coorientadores %}
+              <span class="coorientadores">
+              <br>coorientador:
+                {% for coorientador in coorientadores %}
+                    <a class="imprimir" href="{% url 'user_detail' coorientador.usuario.id %}">
+                      {{coorientador.usuario.get_full_name}} 
+                    </a>
+                    {% comment %} <a class="email" href="mailto:{{coorientador.usuario.email}}">&lt;{{coorientador.usuario.email}}&gt;</a> {% endcomment %}
+                    {% if not forloop.last %}
+                      ;
+                    {% endif %}
+                {% endfor %}
+                </span>
               {% endif %}
+            {% endwith %}
+
           </td>
 
           {% comment %} Relatório Intermediário {% endcomment %}
@@ -274,7 +292,6 @@
       var edicao = $(".filter option:selected").attr("value");
       request_ajax_r = $.ajax({
           type: "POST",
-          url: "{% url 'resultado_projetos' %}",
           data: {
               edicao: edicao,
               'csrfmiddlewaretoken': '{{ csrf_token }}',
